# photonio

./: CMakeLists.txt  CMakeLists.txt.user.2.7pre1  CMakeLists.txt.user.3.0-pre1  README.md  assetpath  index.html  main.cpp  params.json  photonio.pro  shaderpath
assets/: HumanHeart.mtl  HumanHeart.mtl~  Skull.3DS  Skull.gsm  box.mtl  box.mtl~  boxside.dds  bump-heart.mtl  bumpheart.mtl  bumpheart.mtl~  corrected-heart.mtl  corrected-heart.obj~  cursor.blend  cursor.blend1  cursor.blend2  cursor.mtl  cursor.mtl~  eye.c4d  floor.blend  floor.blend1  floor.blend2  floor.mtl  floor.mtl~  grad0.dds  grad1.dds  grad2.dds  grad3.dds  grid.dds  heart.blend  heart.blend1  heart.blend2  heart.dae  heart.mtl  house.blend  house.blend1  house.mtl  house.obj~  newchair.mtl  newchair.mtl~  notexturerender.blend  (+6 more)
assets/archive/: box.blend  box.blend1  box.blend2  boxside.xcf  grid.xcf  pyramid.blend  pyramid.blend1  pyramid.blend2
assets/chair/: CabrioleOBJ.mtl  Krasnoe_derevo.dds  leather.dds  leather.tif  newchair.mtl
assets/f18/: BLENDSWAP_LICENSE.txt  f18.mtl
docs/html/: annotated.html  arcball_8h_source.html  asio_8h_source.html  box_8h_source.html  classArcBall__t-members.html  classArcBall__t.html  classMinicom__client-members.html  classMinicom__client.html  classes.html  classpho_1_1Box-members.html  classpho_1_1Box.html  classpho_1_1Engine-members.html  classpho_1_1Engine.html  classpho_1_1EventQueue-members.html  classpho_1_1EventQueue.html  classpho_1_1MyTuioListener-members.html  classpho_1_1MyTuioListener.html  classpho_1_1Vector3-members.html  classpho_1_1Vector3.html  classpho_1_1WiiButtonState-members.html  classpho_1_1WiiButtonState.html  classpho_1_1flickManager-members.html  classpho_1_1flickManager.html  classudp__server-members.html  classudp__server.html  eventQueue_8h_source.html  files.html  hierarchy.html  index.html  iomanager_8h_source.html  myTuio_8h_source.html  structpho_1_1Buttons-members.html  structpho_1_1Buttons.html  uikun_8h_source.html  util_8h_source.html  vector3_8h_source.html
docs/html/search/: all_61.js  all_65.js  all_6d.js  all_76.js  classes_62.js  classes_66.js  classes_75.js  classes_77.js  search.js
docs/latex/: annotated.tex  classArcBall__t.tex  classMinicom__client.tex  classpho_1_1Box.tex  classpho_1_1Engine.eps  classpho_1_1Engine.tex  classpho_1_1EventQueue.tex  classpho_1_1MyTuioListener.eps  classpho_1_1MyTuioListener.tex  classpho_1_1Vector3.tex  classpho_1_1WiiButtonState.tex  classpho_1_1flickManager.tex  classudp__server.tex  doxygen.sty  hierarchy.tex  refman.tex  structpho_1_1Buttons.tex
include/TUIO/: Doxyfile  TuioClient.h  TuioListener.h  TuioServer.h  TuioTime.h
include/bullet-build/: CMakeCache.txt  Makefile  cmake_install.cmake
include/bullet-build/Demos/: Makefile  cmake_install.cmake
include/bullet-build/Extras/: Makefile  cmake_install.cmake
include/bullet-build/src/: Makefile  cmake_install.cmake
include/cwiid/: Makefile.in  bluetooth.c  command.c  connect.c  cwiid.h  cwiid_internal.h  interface.c  process.c  state.c  thread.c  util.c
include/gli/gtx/: gl_texture2d.inl
include/spuc/: ChangeLog.txt  Readme.txt  doxconfig  makefile
include/spuc/array/: array1d.h  array1d_functions.cpp  array2d.h  array2d_functions.cpp  array3d.h  makefile  tnt_cholesky.h  tnt_lu.h  tnt_qr.h  tnt_transv.h  tnt_triang.h  tnt_trisolve.h
include/spuc/comm/: base_demod.h  baud_eq_env.cpp  baud_eq_env.h  bch.cpp  bch.h  bit_scrambler.h  bped.cpp  bped.h  bpsk_ber_test.cpp  bpsk_ber_test.h  bpsk_dd_phase.h  bpsk_quadricorrelator.h  carrier_nco.cpp  carrier_nco.h  commfunc.cpp  commfunc.h  conv_interleaver.h  convcode.cpp  convcode.h  cp_afc.h  crc.cpp  crc.h  data_conv_encoder.cpp  data_conv_encoder.h  dd_symbol.h  discriminators.h  dqpsk.h  dvb_conv_encoder.cpp  dvb_conv_encoder.h  egolay.cpp  egolay.h  fading_channel.cpp  fading_channel.h  gf.cpp  gf.h  gfx.cpp  gfx.h  hammcode.cpp  hammcode.h  interleave.h  (+44 more)
include/spuc/equalizers/: lms_dfe.cpp  lms_dfe.h  makefile  mle.h  mlsd.cpp  mlsd.h  rls.cpp  rls.h
include/spuc/examples/: baud_equalizer_sim.cpp  equalizer.h  equalizers_sim.cpp  examples.h  main_equalizer.cpp  reference_main.cpp
include/spuc/functions/: idft.cpp  idft.h  ifft.cpp  makefile  misc.cpp  misc.h  rad_walsh.c  scalfunc.cpp  scalfunc.h  spuc_math.cpp  spuc_math.h  window.cpp
include/spuc/generic/: a_d.h  allpass_1.h  allpass_halfband.h  allpass_iir.h  auto_corr.h  binary.cpp  bit.h  (+70 more)
lib/: CMakeLists.txt
lib/ip/: CMakeLists.txt  IpEndpointName.cpp
lib/osc/: CMakeLists.txt  OscHostEndianness.h  OscOutboundPacketStream.cpp
lib/tuio/: CMakeDocument.txt~  CMakeLists.txt  TuioClient.cpp  TuioClient.h  TuioContainer.h  TuioCursor.h  TuioObject.h  TuioPoint.h  TuioServer.cpp  TuioTime.cpp
shaders/: ashader.frag  ashader.vert  assimp.frag  assimp.vert  bump.frag  bump.vert  circle.frag  circle.geom  circle.vert  color.frag  color.vert  cylinder.frag  cylinder.geom  cylinder.vert  dirlightdiffambpix.frag  dirlightdiffambpix.vert  flat.frag  flat.vert  flatLit.frag  flatLit.vert  lines.frag  lines.geom  lines.vert  normals.frag  normals.geom  normals.vert  notexture.frag  notexture.vert  offscreen.frag  offscreen.vert  planeShader.frag  prlines.frag  prlines.geom  prlines.vert  rendershadow.frag  rendershadow.vert  shader.frag  shader.vert  specular.frag  specular.vert  (+6 more)
src/: CMakeLists - unix.txt  CMakeLists.txt  arcball.cpp  arcball.h  asio.cpp  asio.h  assets.cpp  assets.h  box.cc  box.h  cmakelists-complicated.txt  data.proto  data.proto.bak  doxyconf  eventQueue.cpp  eventQueue.h  experimentManager.cpp  experimentManager.h  main.cpp  myTuio.cpp  myTuio.h  photonio.cpp  photonio.h  protocompile  ray.h  uikun.cpp  uikun.h  util.cpp  util.h  vector3.h  wiimote.cpp
src/assets/: asset.cpp  asset.h  assets.cpp  assets.h  assimporter.cpp  assimporter.h  cursor.cpp  cursor.h  loader.cpp  loader.h  mesh.cpp  mesh.h  model.cpp  model.h  plane.cpp  plane.h  shader.cpp  shader.h
src/shaders/: CMakeLists.txt.bak.txt  ashader.frag  ashader.vert  offscreen.vert  shader.frag  shader.vert  texader.frag
(+147 files in other folders)
